--- a/templates/editor.html
+++ b/templates/editor.html
@@ -16,6 +16,7 @@
         <a id="editedPdfLink" class="ghost" href="#" target="_blank" rel="noopener" style="display:none">Open edited PDF</a>
         <a class="ghost" href="{{ debug_pdf_url }}" target="_blank" rel="noopener">Open debug PDF</a>
         <button id="saveBtn" class="primary">Save edits</button>
+        <button id="downloadBtn" class="ghost">Download edited PDF</button>
       </div>
     </header>
     <main class="workspace">
