--- a/templates/editor.html
+++ b/templates/editor.html
@@ -25,7 +25,10 @@
           <h2>Selected box</h2>
           <label>
             <span>Font size</span>
-            <input id="fontSize" type="range" min="8" max="48" value="16" />
+            <div class="input-row">
+              <input id="fontSize" type="range" min="8" max="72" value="16" />
+              <input id="fontSizeNumber" type="number" min="8" max="72" value="16" />
+            </div>
           </label>
           <label>
             <span>Color</span>
