--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
             </label>
             <label>
               <span>OpenAI model</span>
-              <input type="text" name="model" value="gpt-4o-mini" />
+              <input type="text" name="model" value="gpt-oss:120b" />
             </label>
           </div>
           <button class="primary" type="submit">Run pipeline</button>
