新增保留語言功能，選擇全部都保留，選擇中文只保留中文，英文同理

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,14 @@
               <input type="checkbox" name="translate" />
             </label>
             <label>
+              <span>保留語言</span>
+              <select name="keep_lang">
+                <option value="all" selected>全部</option>
+                <option value="zh">中文</option>
+                <option value="en">英文</option>
+              </select>
+            </label>
+            <label>
               <span>翻譯語言</span>
               <input type="text" name="target_lang" value="en" />
             </label>
