--- a/static/app.css
+++ b/static/app.css
@@ -169,7 +169,8 @@ label span {
 input[type="number"],
 input[type="file"],
 input[type="range"],
-input[type="color"] {
+input[type="color"],
+select {
   width: 100%;
   padding: 0.5rem 0.7rem;
   border-radius: 10px;
