--- a/templates/editor.html
+++ b/templates/editor.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>OCR Overlay Studio - Editor</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.2.67/pdf.min.js" referrerpolicy="no-referrer"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.2.67/pdf.min.js" referrerpolicy="no-referrer"></script> -->
+     <script src="/static/pdfjs/pdf.min.js" referrerpolicy="no-referrer"></script>
   </head>
   <body class="editor" data-job-id="{{ job_id }}">
     <header class="topbar">
